plugins {
  id 'java'
  id 'maven-publish'
  id 'com.github.johnrengelman.shadow' version '5.1.0'
}

apply plugin: 'java'
apply plugin: 'application'
apply plugin: 'eclipse'

sourceSets {
    main {
        java {
            srcDirs 'submodules/yacy_grid_mcp/src/main/java', 'src/main/java'
        }
    }
}

mainClassName = "net.yacy.grid.parser.Parser"
applicationDefaultJvmArgs = ["-Xmx4g"]

group = 'net.yacy'
version = '0.0.1-SNAPSHOT'

description = "YaCy Grid Parser"

sourceCompatibility = 1.8
targetCompatibility = 1.8

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

repositories {
     mavenCentral()
}

jar {
    manifest {
        attributes 'Main-Class': 'net.yacy.grid.crawler.Crawler'
    }
}

shadowJar {
  zip64 true
  exclude 'data'
}

dependencies {
    implementation 'com.hazelcast:hazelcast:4.2.+'
    implementation 'com.rabbitmq:amqp-client:5.+'
    implementation 'commons-net:commons-net:3.+'
    implementation 'io.minio:minio:8.3.+'
    implementation 'javax.servlet:javax.servlet-api:4.+'
    implementation 'jcifs:jcifs:1.+'
    implementation 'org.apache.httpcomponents:httpmime:4.+'
    implementation 'org.eclipse.jetty:jetty-server:9.4.+'
    implementation 'org.eclipse.jetty:jetty-servlet:9.4.+'
    implementation 'org.eclipse.jgit:org.eclipse.jgit:5.+'
    implementation 'org.elasticsearch.client:transport:6.8.+'
    implementation 'org.mapdb:mapdb:3.+'
    implementation 'org.slf4j:log4j-over-slf4j:1.7.+'
    implementation 'org.slf4j:slf4j-jdk14:1.7.+'
    
    implementation 'org.jwat:jwat-warc:1.+'
    implementation 'org.apache.poi:poi:4.+'
    implementation 'org.apache.poi:poi-scratchpad:4.+'
    implementation 'org.apache.commons:commons-compress:1.+'
    implementation 'org.apache.commons:commons-lang3:3.+'
    implementation 'org.apache.pdfbox:pdfbox:2.+'
    implementation 'org.apache.pdfbox:fontbox:2.+'
    implementation 'org.apache.pdfbox:preflight:2.+'
    implementation 'org.apache.pdfbox:xmpbox:2.+'
//    implementation 'org.apache.pdfbox:jempbox:1.+'

    implementation 'com.ibm.icu:icu4j:65.+'
    implementation 'org:jaudiotagger:2.+'
//    implementation 'net.sourceforge.jchardet:jchardet:1.+'
    implementation 'com.twelvemonkeys.imageio:imageio-bmp:3.+'
//    implementation 'org.jsoup:jsoup:1.+'
//    implementation 'xerces:xercesImpl:2.12.0'
//    implementation 'org.bouncycastle:bcprov-jdk16:1.+'
    implementation 'org.apache.any23:apache-any23-core:2.4'
    implementation 'org.eclipse.rdf4j:rdf4j-model:3.7.1'
}
